--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -70,15 +70,13 @@
     {% extends "base.html" %}
 
     {% block content %}
-    <h2>Log In</h2>
     <div class="login-container">
         <h1>Login to Flavor Finder</h1>
         <form method="post">
           {% csrf_token %}
           {{ form }}
           <button type="submit">Login</button>
-        <p>Don't have an account? <a href="/register">Sign up here</a></p>
-        <p><a href="/forgot-password">Forgot your password?</a></p>
+        <p>Don't have an account? <a href="/accounts/signup/">Sign up here</a></p>
     </div>
 
     {% endblock %}
