--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -74,7 +74,7 @@
           {{ form }}
           <button type="submit">Sign Up</button>
         </form>
-        <a href="#">Already have an account? Log in</a>
+        <a href="/accounts/login/">Already have an account? Log in</a>
     </div>
 
     {% endblock %}
