--- a/static/flavor_finder/css/styles.css
+++ b/static/flavor_finder/css/styles.css
@@ -162,7 +162,7 @@ footer {
     cursor: pointer;
 }
 .hero {
-    background-image: url('https://example.com/hero-image.jpg');
+    background-image: url('https://www.dosafactorymenu.com/blog-admin/images/indian-food-items-apt-for-everyone041641.jpeg');
     background-size: cover;
     background-position: center;
     color: white;
@@ -171,7 +171,7 @@ footer {
 }
 
 .hero h1 {
-    font-size: 3em;
+    font-size: 4em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
