--- a/static/flavor_finder/css/list_styles.css
+++ b/static/flavor_finder/css/list_styles.css
@@ -1,5 +1,10 @@
 body {
-    font-family: "Lilita One", sans-serif;
+    font-family: "Afacad Flux", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: <weight>;
+      font-style: normal;
+      font-variation-settings:
+        "slnt" 0;
     margin: 0;
     padding: 0;
     background-color: #121212; /* Dark background */
@@ -289,4 +294,34 @@ td:hover {
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+.search-input {
+    width: 100%; /* Full width */
+    max-width: 400px; /* Set maximum width */
+    padding: 10px; /* Padding for better touch area */
+    margin-right: 10px; /* Space between input and button */
+    border: 1px solid #444; /* Darker border color */
+    border-radius: 5px; /* Rounded corners */
+    background-color: #222; /* Dark background color */
+    color: #ffffff; /* Light text color */
+    font-size: 1em; /* Font size */
+}
+
+.search-input::placeholder {
+    color: #888; /* Placeholder text color */
+}
+
+.nav-button {
+    background-color: #ff6347; /* Tomato color for button */
+    color: white;
+    padding: 10px 20px; /* Button padding */
+    border: none;
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer;
+    transition: background-color 0.3s; /* Smooth transition */
+}
+
+.nav-button:hover {
+    background-color: #ff8560; /* Lighter shade on hover */
 }
