--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover unique flavors, recipes, and culinary experiences with Flavor Finder.">
     <title>Flavor Finder</title>
-    <link rel='stylesheet' href="{% static 'flavor_finder/css/styles.css' %}">
+    <link rel='stylesheet' href="{% static 'flavor_finder/css/home_styles.css' %}">
 </head>
 <body>
     {% block content %}
@@ -16,25 +16,25 @@
             <a href="/" class="nav-button">Home</a>
             <a href="/accounts/food-data" class="nav-button">Food Data</a>
         </nav>
-        {% if user.is_authenticated %}
-            Hi {{ user.username }}!
-            <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit" class="nav-button">Log Out</button>
-            </form>
-        {% else %}
-            <p>You are not logged in</p>
-            <a href="{% url 'login' %}" class="nav-button">Log In</a>
-        {% endif %}
     </header>
 
     <section class="hero">
-        <h1>Uncover the World's Best Flavors</h1>
-        <p>Find unique tastes, delicious recipes, and hidden gems from all over the globe.</p>
-        <form action="/search" method="get">
-            <input type="text" placeholder="What flavor are you looking for?" name="search">
-            <button type="submit" class="cta-button">Search</button>
-        </form>
+        <div class="hero-content">
+            <h2>
+            {% if user.is_authenticated %}
+                Hi {{ user.username }}!
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="nav-button">Log Out</button>
+                </form>
+            {% else %}
+                <p>You are not logged in</p>
+                <a href="{% url 'login' %}" class="nav-button">Log In</a>
+            {% endif %}
+            <h2>
+            <h1>Uncover the World's Best Flavors</h1>
+            <p>Find unique tastes, delicious recipes, and hidden gems from all over the globe.</p>
+        </div>
     </section>
     {% endblock %}
 </body>
