--- a/templates/update_food.html
+++ b/templates/update_food.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'flavor_finder/css/update_styles.css' %}">
     <title>Update Food Item</title>
 </head>
 <body>
